--- a/css/main.scss
+++ b/css/main.scss
@@ -43,6 +43,9 @@ $on-laptop:        800px;
     }
 }
 
+body{
+    background-color:#F0F8FF;
+}
 
 
 // Import partials from `sass_dir` (defaults to `_sass`)
