--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,7 +22,7 @@
 
           {% if site.twitter_username %}
           <li>
-            {% include icon-twitter.html username=site.psn_username %}
+            {% include icon-psn.html username=site.psn_username %}
           </li>
           {% endif %}
         </ul>
