--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,7 +20,7 @@
           </li>
           {% endif %}
 
-          {% if site.twitter_username %}
+          {% if site.psn_username %}
           <li>
             {% include icon-psn.html username=site.psn_username %}
           </li>
